fix&cam&comment

--- a/components/controller.html
+++ b/components/controller.html
@@ -1,5 +1,7 @@
 <div id="ctrlWrap">
-  <div id="background"></div>
+  <div id="background">
+    <img alt="" :src="img"/>
+  </div>
   <div id="controller">
     <div id="status">
       Pitch:{{pitch}},Yaw:{{yaw}},Roll:{{roll}},Thro:{{thro}}
