--- a/components/advanced.html
+++ b/components/advanced.html
@@ -4,4 +4,21 @@
   <h3>Current Status</h3>
   Xaxis(rad) = {{stat.radX}}<br>
   Yaxis(rad) = {{stat.radY}}<br>
+
+  <div class="cube" id="accCube" :style='accCubeStyle'>
+    <div class="surface front">front</div>
+    <div class="surface right">right</div>
+    <div class="surface left">left</div>
+    <div class="surface top">top</div>
+    <div class="surface bottom">bottom</div>
+    <div class="surface back">back</div>
+  </div>
+  <div class="cube" id="gyroCube" :style='gyroCubeStyle'>
+    <div class="surface front">front</div>
+    <div class="surface right">right</div>
+    <div class="surface left">left</div>
+    <div class="surface top">top</div>
+    <div class="surface bottom">bottom</div>
+    <div class="surface back">back</div>
+  </div>
 </div>
