--- a/scss/style.scss
+++ b/scss/style.scss
@@ -250,3 +250,65 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e50114', end
   }
   
 }
+#advWrap{
+  //http://cartman0.hatenablog.com/entry/2015/05/29/173343からお借りしました.
+  .cube {
+    width: 1px;
+    height: 1px;
+    margin: 100px auto;
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    //border: 5px solid red;
+    position: relative;
+  }
+
+  .surface {
+    width: 100px;
+    height: 100px;
+    background: rgba(0, 0, 0, 0.1);
+    border: 2px solid gray;
+    position: absolute;
+    left: calc(-100px / 2);
+    top: calc(-100px / 2);
+    text-align: center;
+    line-height: 100px;
+  }
+
+  .front {
+    transform:
+    translateZ(calc(100px / 2));
+    -webkit-transform:
+    translateZ(calc(100px / 2));
+  }
+  .back {
+    transform:
+    translateZ(calc(-100px / 2)) rotateY(180deg);
+    -webkit-transform:
+    translateZ(calc(-100px / 2)) rotateY(180deg);
+  }
+  .right {
+    transform: 
+    translateX(calc(100px / 2)) rotateY(90deg);
+    -webkit-transform: 
+    translateX(calc(100px / 2)) rotateY(90deg);
+  }
+  .left {
+    transform:
+    translateX(calc(-100px / 2)) rotateY(-90deg);
+    -webkit-transform:
+    translateX(calc(-100px / 2)) rotateY(-90deg);
+  }
+  .top{
+    transform:
+    translateY(calc(-100px / 2)) rotateX(90deg);
+    -webkit-transform:
+    translateY(calc(-100px / 2)) rotateX(90deg);
+  }
+  .bottom{
+    transform:
+    translateY(calc(100px / 2)) rotateX(-90deg) ;
+    -webkit-transform:
+    translateY(calc(100px / 2)) rotateX(-90deg) ;
+  }
+}
+
