--- a/components/advanced.html
+++ b/components/advanced.html
@@ -5,7 +5,7 @@
   Xaxis(rad) = {{stat.radX}}<br>
   Yaxis(rad) = {{stat.radY}}<br>
 
-  <div class="cube" id="accCube" :style='accCubeStyle'>
+  <div class="cube" id="accCube" :style='stat.accCubeStyle'>
     <div class="surface front">front</div>
     <div class="surface right">right</div>
     <div class="surface left">left</div>
@@ -13,7 +13,7 @@
     <div class="surface bottom">bottom</div>
     <div class="surface back">back</div>
   </div>
-  <div class="cube" id="gyroCube" :style='gyroCubeStyle'>
+  <div class="cube" id="gyroCube" :style='stat.gyroCubeStyle'>
     <div class="surface front">front</div>
     <div class="surface right">right</div>
     <div class="surface left">left</div>
