--- a/components/advanced.html
+++ b/components/advanced.html
@@ -4,6 +4,9 @@
   <h3>Current Status</h3>
   Xaxis(rad) = {{stat.radX}}<br>
   Yaxis(rad) = {{stat.radY}}<br>
+  <br/>
+  Gyro(rad/s?):{{stat.gyroX}},{{stat.gyroY}},{{stat.gyroZ}} <br/>
+  Gyro Integral:{{gyroSum}} <br/>
 
   <div class="cube" id="accCube" :style='stat.accCubeStyle'>
     <div class="surface front">front</div>
