--- a/components/advanced.html
+++ b/components/advanced.html
@@ -16,7 +16,7 @@
     <div class="surface bottom">bottom</div>
     <div class="surface back">back</div>
   </div>
-  <div class="cube" id="gyroCube" :style='stat.gyroCubeStyle'>
+  <div class="cube" id="gyroCube" :style='stat.gyroCubeStyle' @click="gyroSum={}">
     <div class="surface front">front</div>
     <div class="surface right">right</div>
     <div class="surface left">left</div>
