--- a/components/option.html
+++ b/components/option.html
@@ -23,12 +23,18 @@
     <span class="label">KD</span><input type="number" step=0.01 v-model="kd"/>
   </div>
   <div class="optionItm">
-    <span class="label">Sensor Callibration(x,y,z)=</span><input type="number" step=0.01 v-model="xCal"/><input type="number" step=0.01 v-model="yCal"/><input type="number" step=0.01 v-model="zCal"/>
+    <span class="label">Acceleration Callibration(x,y,z)=</span><input type="number" step=0.01 v-model="xCal"/><input type="number" step=0.01 v-model="yCal"/><input type="number" step=0.01 v-model="zCal"/>
+  </div>
+  <div class="optionItm">
+    <span class="label">Gyro Callibration(x,y,z)=</span><input type="number" step=0.01 v-model="xGyroCal"/><input type="number" step=0.01 v-model="yGyroCal"/><input type="number" step=0.01 v-model="zGyroCal"/>
   </div>
   <div class="optionItm">
     <span class="label">axis(y,p,r,t)=</span><input type="number" step=0.01 v-model="yawScale"/><input type="number" step=0.01 v-model="pitchScale"/><input type="number" step=0.01 v-model="rollScale"/><input type="number" step=0.01 v-model="throScale"/>
   </div>
-  
+  <div class="optionItm">
+    <span class="label">motor callibration</span>
+    <div v-for="mt in motors"><input type="number" step=0.01 v-model="mt.calib"/></div>
+  </div>
   <div class="optionItm">
     <button @click="sendParam">Send Parameter</button>
   </div>
